refactor: create auth dto
